# zabbix-docker-monitoring

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile.am  README.md  autogen.sh  buildrpm.sh  changelog.md  configure.ac  releases.sh
.github/workflows/: build.yml  releases.sh  zabbix_agentd.conf
amazonlinux/3.0/: md5sum.txt  sha1sum.txt  sha256sum.txt
amazonlinux/3.2/: md5sum.txt  sha1sum.txt  sha256sum.txt
amazonlinux/3.4/: md5sum.txt  sha1sum.txt  sha256sum.txt
amazonlinux1/4.0/: md5sum.txt  sha1sum.txt  sha256sum.txt
amazonlinux1/5.0/: md5sum.txt  sha1sum.txt  sha256sum.txt
amazonlinux1/5.2/: md5sum.txt  sha1sum.txt  sha256sum.txt
amazonlinux1/5.4/: md5sum.txt  sha1sum.txt  sha256sum.txt
amazonlinux1/6.0/: md5sum.txt  sha1sum.txt  sha256sum.txt
amazonlinux2/4.0/: md5sum.txt  sha1sum.txt  sha256sum.txt
amazonlinux2/5.0/: md5sum.txt  sha1sum.txt  sha256sum.txt
amazonlinux2/5.2/: md5sum.txt  sha1sum.txt  sha256sum.txt
amazonlinux2/5.4/: md5sum.txt  sha1sum.txt  sha256sum.txt
amazonlinux2/6.0/: md5sum.txt  sha1sum.txt  sha256sum.txt
artifacts/: deploy.sh  deploy_key.enc
centos6/3.0/: md5sum.txt  sha1sum.txt  sha256sum.txt
centos6/3.2/: md5sum.txt  sha1sum.txt  sha256sum.txt
centos7/: md5sum.txt  sha1sum.txt  sha256sum.txt
debian8/: md5sum.txt  sha1sum.txt  sha256sum.txt
packaging/: buildrpm.sh  configure.ac  fpmbuildrpm.sh
packaging/debian/: changelog  control  copyright  install  libzbxdocker.conf  postrm  rules
packaging/rpmbuild/: libzbxdocker.spec
selinux/: zabbix-docker.te
template/: UNTESTED-Zabbix-Template-App-Docker-as-host(3.x-only).xml  Zabbix-2.2-Template-App-Docker-active.xml  Zabbix-2.2-Template-App-Docker.xml  Zabbix-2.4-Template-App-Docker.xml  Zabbix-Template-App-Docker-Mesos-Marathon-Chronos.xml  Zabbix-Template-App-Docker-Mesos.xml  Zabbix-Template-App-Docker-active.xml  Zabbix-Template-App-Docker-as-host(3.x-only).xml  Zabbix-Template-App-Docker.xml
ubuntu14/: md5sum.txt  sha1sum.txt  sha256sum.txt
(+388 files in other folders)
